--- a/css/command-page.css
+++ b/css/command-page.css
@@ -120,6 +120,18 @@ header.masthead h1 {
   opacity: 0.3;
 }
 
+.kick {
+  width: 100%;
+  height: 1000px;
+  background: #ccc;
+}
+
+.kickalias {
+  width: 100%;
+  height: 1000px;
+  background: #999;
+}
+
 footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
